--- a/_posts/2011-01-26-presentation-model-parsley-decoupled-binding.html
+++ b/_posts/2011-01-26-presentation-model-parsley-decoupled-binding.html
@@ -20,7 +20,7 @@ author:
 ---
 <p>Since version 2.3 <a href="http://www.spicefactory.org/parsley/">Parsley</a> has introduced the <a href="http://www.spicefactory.org/parsley/docs/2.4/manual/bindings.php">Decoupled Binding</a>.<br />
 This feature has nothing new, and some framework  (like <a href="http://www.graniteds.org/">Tide</a>) has already similar concept since a long time, but in Parsley the add of a more lightweight and dynamic way to share data and states greatly ease the use of the Framework.</p>
-#&&&#
+<!--excerpt-->
 <p>In my point of view, with the <a href="http://martinfowler.com/eaaDev/PresentationModel.html">Presentation Model</a> pattern, Decoupled Binding should be mainly used in two cases :</p>
 <ul>
 <li>Avoiding a direct reference to the domain layer in the presentation layer.</li>
