--- a/_posts/2011-03-14-working-with-zend_amf-doctrine-2-and-flex.html
+++ b/_posts/2011-03-14-working-with-zend_amf-doctrine-2-and-flex.html
@@ -19,7 +19,7 @@ author:
   last_name: de Campredon
 ---
 <p>I'm actually  working with <a title="Zend Amf" href="http://framework.zend.com/manual/fr/zend.amf.html">Zend_AMF</a> and <a title="Doctrine" href="http://www.doctrine-project.org/">Doctrine 2</a> to create services for a flex application, and doing so i'm facing number of annoying problems :</p>
-#&&&#
+<!--excerpt-->
 <ul>
 <li>Firstly Zend serializes only public properties on object transmitted to flex, and Doctrine 2 Entity must declare their properties as protected and access them through magic functions, or accessor, to ensure proxy loading.</li>
 <li>Zend automatically casts date as Zend_Date, and Doctrine can work only with php DateTime object.</li>
